# SuccessiveConvexificationCpp

code_generation/: convex_problem.py  convex_problem_small.py
code_generation/raw/Aeroland_core/: CMakeLists.txt  main.c  problem.c  problem.h
code_generation/raw/Aeroland_core_modified/: CMakeLists.txt
code_generation/raw/Aeroland_core_modified/include/: problem.h  successive.h
code_generation/raw/Aeroland_core_modified/src/: main.cpp  problem.c
code_generation/raw/Aeroland_core_small/: CMakeLists.txt  problem.c  problem.h
include/: EcosWrapper.hpp
src/: EcosWrapper.cpp  main.cpp
